syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/tijanadmi/bookings_backend/pb";

message Room {
    int32 room_id  = 1;
    string room_name_sr = 2;
    string room_name_en = 3;
    string room_name_bg = 4;
    string room_shortdes_sr = 5;
    string room_shortdes_en = 6;
    string room_shortdesc_bg = 7;
    string room_des_sr = 8;
    string room_des_en = 9;
    string room_desc_bg = 10;
    string room_pictures_folder = 11;
    int32 room_guest_number= 12;
    int32 room_price_en= 13;
    google.protobuf.Timestamp created_at = 14;
    google.protobuf.Timestamp updated_at = 15;

}